--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+2
+  hive: ^1.0.0
+  hive_flutter: ^0.2.1
+  path_provider: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^0.5.1
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
